Added some CSS to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <style>
+        body {
+            color: white;
+            background-color: #333;
+            font-size: 150%;
+            font-family: 'Satisfy', cursive;
+            margin:5em 25%;
+        }
+        </style>
+    </head>
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <!-- The conversation continues... -->
