--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html>
     <head>
         <style>
-        body {
-            color: white;
-            background-color: #333;
-            font-size: 150%;
-            font-family: 'Satisfy', cursive;
-            margin:5em 25%;
-        }
+        <link rel ="stylesheet" type="text/css" href="style.css">
         </style>
     </head>
    <body>
